--- a/index.html
+++ b/index.html
@@ -5,9 +5,31 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>LAB-calculator</title>
   <link rel="stylesheet" href="main.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 </head>
 <body>
   <script src="main.js"></script>
-  
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+
+  <div class="wrapper">
+    <button id="display"> DISPLAY </button>
+    <button id="clear"> C </button>
+    <button id="delete"> &#8592; </button>
+    <button id="divide"> &#247; </button>
+    <button id="seven"> 7 </button>
+    <button id="eight"> 8 </button>
+    <button id="nine"> 9 </button>
+    <button id="multiply"> &#215; </button>
+    <button id="four"> 4 </button>
+    <button id="five"> 5 </button>
+    <button id="six"> 6 </button>
+    <button> &#8722; </button>
+    <button id="one"> 1 </button>
+    <button id="two"> 2 </button>
+    <button id="three"> 3 </button>
+    <button> &#43; </button>
+    <button id="zero"> 0 </button>
+    <button> &#61; </button>
+  </div>
 </body>
 </html>
