--- a/index.html
+++ b/index.html
@@ -11,25 +11,27 @@
   <script src="main.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 
-  <div class="wrapper">
-    <button id="display"> DISPLAY </button>
-    <button id="clear"> C </button>
-    <button id="delete"> &#8592; </button>
-    <button id="divide"> &#247; </button>
-    <button id="seven"> 7 </button>
-    <button id="eight"> 8 </button>
-    <button id="nine"> 9 </button>
-    <button id="multiply"> &#215; </button>
-    <button id="four"> 4 </button>
-    <button id="five"> 5 </button>
-    <button id="six"> 6 </button>
-    <button> &#8722; </button>
-    <button id="one"> 1 </button>
-    <button id="two"> 2 </button>
-    <button id="three"> 3 </button>
-    <button> &#43; </button>
-    <button id="zero"> 0 </button>
-    <button> &#61; </button>
-  </div>
+  <div id="calculator" class="container">
+    <div id="display-screen" class="display">9000</div>
+    <div class ="buttons">
+      <button id="clear" class="btn-clear"> C </button>
+      <button id="backspace" class="btn-backspace"> &#8592; </button>
+      <button id="divide" class="btn-operator"> &#247; </button>
+      <button id="seven" class="btn-number"> 7 </button>
+      <button id="eight" class="btn-number"> 8 </button>
+      <button id="nine" class="btn-number"> 9 </button>
+      <button id="multiply" class="btn-operator"> &#215; </button>
+      <button id="four" class="btn-number"> 4 </button>
+      <button id="five" class="btn-number"> 5 </button>
+      <button id="six" class="btn-number"> 6 </button>
+      <button id="subtract" class="btn-operator"> &#8722; </button>
+      <button id="one" class="btn-number"> 1 </button>
+      <button id="two" class="btn-number"> 2 </button>
+      <button id="three" class="btn-number"> 3 </button>
+      <button id="plus" class="btn-operator"> &#43; </button>
+      <button id="zero" class="btn-number"> 0 </button>
+      <button id="equals" class="btn-operator"> &#61; </button>
+    </div>
+  </div>  
 </body>
 </html>
